<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frmRegistro"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="25dp"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/gastos"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeRegistro"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalleRegistro"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreUsuario"
            app:startIconDrawable="@drawable/nombre_usuario"
            app:startIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correoElectronico"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/correo_electronico"
            app:startIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/claveRegistro"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/clave_usuario"
            app:startIconTint="@color/black"
            app:helperTextEnabled="true"
            app:helperText="Debe contener letras y numeros"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonRegistro"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnVolverLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensajeInicioSesion"
        android:background="#00000000"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>


</LinearLayout>